# System_Programming_lab_2

./: CMakeLists.txt
client/: CMakeLists.txt  main.c
include/: structs.h
server/: CMakeLists.txt  handler.c  handler.h  logger.c  logger.h  main.c
